--- a/part-1/index.html
+++ b/part-1/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <div class="continer">
-        <div class="box-icon" ><img src="https://cdn-icons-png.flaticon.com/512/4436/4436481.png" class="icon" alt="icon"></div>
-        <hr>
-        <div class="text" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, atque! Soluta, voluptatibus excepturi. Illo earum pariatur soluta nobis reiciendis, eius repellat voluptatem quidem optio odio vero est voluptatibus molestias porro repudiandae dolore, quod possimus quibusdam? Ipsa, aspernatur, nostrum, a doloribus eius cupiditate deleniti illum dolore consequatur quidem animi aliquam expedita!
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa atque qui praesentium corporis soluta. Velit dolore, voluptas at cumque in provident officia ea praesentium quaerat voluptate quibusdam ducimus voluptates tempora voluptatem atque explicabo, quidem laudantium eaque error ab nobis. Nam dolor consectetur deserunt eveniet id numquam asperiores, provident est dolorum!
-        </div>
+      <div class="box-icon">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/4436/4436481.png"
+          class="icon"
+          alt="icon"
+        />
+      </div>
+      <hr />
+      <div class="text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, atque!
+        Soluta, voluptatibus excepturi. Illo earum pariatur soluta nobis
+        reiciendis, eius repellat voluptatem quidem optio odio vero est
+        voluptatibus molestias porro repudiandae dolore, quod possimus
+        quibusdam? Ipsa, aspernatur, nostrum, a doloribus eius cupiditate
+        deleniti illum dolore consequatur quidem animi aliquam expedita! Lorem
+        ipsum dolor, sit amet consectetur adipisicing elit. Ipsa atque qui
+        praesentium corporis soluta. Velit dolore, voluptas at cumque in
+        provident officia ea praesentium quaerat voluptate quibusdam ducimus
+        voluptates tempora voluptatem atque explicabo, quidem laudantium eaque
+        error ab nobis. Nam dolor consectetur deserunt eveniet id numquam
+        asperiores, provident est dolorum!
+      </div>
     </div>
-</body>
+  </body>
 </html>
