--- a/part-2/index.html
+++ b/part-2/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2321/2321232.png " type="image/png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      href="https://cdn-icons-png.flaticon.com/512/2321/2321232.png "
+      type="image/png"
+    />
     <title>Login page</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="title" >Login</div>
-        <label for="username">User Name</label>
-        <input type="text" id="username" placeholder="User Name" autocomplete="off" >
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Password"  autocomplete="off" >
-        <button>Login</button>
+      <div class="title">Login</div>
+      <label for="username">User Name</label>
+      <input
+        type="text"
+        id="username"
+        placeholder="User Name"
+        autocomplete="off"
+      />
+      <label for="password">Password</label>
+      <input
+        type="password"
+        id="password"
+        placeholder="Password"
+        autocomplete="off"
+      />
+      <button>Login</button>
     </div>
-</body>
+  </body>
 </html>
